2004-06-05  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome28.modules: Added gnome-doc-utils and added it as 
	a dependency for yelp.

2004-06-03  Marco Pesenti Gritti  <marco@gnome.org>

	* modulesets/gnome28.modules:

	Epiphany now requires mozilla 1.7

Sat May 29 20:53:33 2004  Jonathan Blandford  <jrb@gnome.org>

	* modulesets/gnome26.modules: change pango to use the 1.4 branch.
	* modulesets/gnome28.modules: ditto

Sat May 29 20:13:05 2004  Jonathan Blandford  <jrb@gnome.org>

	* modulesets/gnome28.modules: add dasher to
	meta-gnome-accessibility.

Mon May 24 16:53:14 2004  Jonathan Blandford  <jrb@gnome.org>

	* modulesets/gnome26.modules: update libgnetwork here as well

Mon May 24 15:38:14 2004  Jonathan Blandford  <jrb@gnome.org>

	* modulesets/gnome28.modules: libgtcpsocket is dead.  long live
	libgnetwork.  or something.

2004-05-20  Mark McLoughlin  <mark@skynet.ie>

	* modulesets/gnome26.modules,
	  modulesets/gnome28.modules: update libtasn1 to
	0.2.10 since they seem to delete the old releases
	when a new one comes out.

2004-05-20  James Henstridge  <james@daa.com.au>

	* HACKING: add a file outlining cases when people can commit
	without approval.  This just codifies existing practice.

	* modulesets/bootstrap.modules (python): compile with the
	"--enable-shared" configure flag, so that it produces a shared
	library.

Wed May 19 14:30:03 2004  Jonathan Blandford  <jrb@redhat.com>

	* jhbuild/modtypes/mozillamodule.py (MozillaModule.get_builddir):
	remove extraneous 'self' call to get_srcdir

2004-05-19  James Henstridge  <james@daa.com.au>

	* modulesets/bootstrap.modules (automake-1.8): update to 1.8.5.

	* jhbuild/modtypes/tarball.py (Tarball.do_configure): fix up some
	breakage in tarball builds caused by yesterday's patch.

	* modulesets/gnome26.modules (procman): use gnome-2-6 branch.

2004-05-18  James Henstridge  <james@daa.com.au>

	* jhbuild/modtypes/__init__.py: don't import tarball and mozilla