@@ -1,3 +1,10 @@
+2004-06-05  Davyd Madeley  <davyd@ucc.asn.au>
+
+	* contrib/jhbuild_completion.bash:
+	- Added -c option.
+	- Prevented tab completion from inadvertantly executing the GNU info
+	system.
+	
 2004-06-05  Murray Cumming  <murrayc@murrayc.com>
 
 	* modulesets/gnome28.modules: Added gnome-doc-utils and added it as 
